Se realiza diseño de registro

--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -2,7 +2,7 @@
     <form class="form">
         <p class="form-title">Iniciar Sesión</p>
         <div class="input-container">
-            <input placeholder="Ingresa email" type="email">
+            <input placeholder="Ingresar email" type="email">
             <span>
                 <svg stroke="currentColor" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -12,7 +12,7 @@
             </span>
         </div>
         <div class="input-container">
-            <input placeholder="Ingresa contraseña" type="password">
+            <input placeholder="Ingresar contraseña" type="password">
 
             <span>
                 <svg stroke="currentColor" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -29,7 +29,7 @@
         </button>
 
         <p class="signup-link">
-            No tienes una cuenta?
+            ¿No tienes una cuenta?
             <a href="">Registrate</a>
         </p>
     </form>
