--- a/src/app/auth/pages/login-page/login-page.component.css
+++ b/src/app/auth/pages/login-page/login-page.component.css
@@ -1,8 +1,11 @@
+
 .form-container {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-49%, -49%);
+    font-family: 'Roboto';
+    font-weight: 500;
 }
 
 .form {
@@ -72,10 +75,10 @@
     color: #ffffff;
     font-size: 0.875rem;
     line-height: 1.25rem;
-    font-weight: 500;
+    font-family: 'Roboto';
+    font-weight: 400;
     width: 100%;
     border-radius: 0.5rem;
-    text-transform: uppercase;
   }
 
   .submit:hover {
