auth service developed

--- a/src/app/administration/layout/administration-layout/administration-layout.component.html
+++ b/src/app/administration/layout/administration-layout/administration-layout.component.html
@@ -1,50 +1,41 @@
+<mat-sidenav-container fullscreen>
 
-  <mat-sidenav-container fullscreen>
-
-    <mat-sidenav #sidenav mode="push" [ngStyle]="{ width: '250px'}"> 
-      <mat-toolbar color="primary" style="background-color: #050531;">
-        <span>Menú</span>
-        <span class="spacer"></span>
-        <button mat-icon-button (click)="sidenav.toggle()">
-          <mat-icon>menu</mat-icon>
-        </button>
-          
-      </mat-toolbar>
-
-<mat-nav-list> 
-  <mat-list-item 
-  *ngFor="let item of sidebarItems"
-  [routerLink]="item.url"
-  (click)="sidenav.toggle()"
-  >
-    <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
-    {{ item.label }}
-  </mat-list-item>
-</mat-nav-list>
-
-    </mat-sidenav>
-
+  <mat-sidenav #sidenav mode="push" [ngStyle]="{ width: '250px'}">
     <mat-toolbar color="primary" style="background-color: #050531;">
-      <button mat-icon-button (click)="sidenav.toggle()"> 
-        <mat-icon>menu</mat-icon>
-      </button>
-
+      <span>Menú</span>
       <span class="spacer"></span>
-
-      <button mat-button>
-        Iniciar Sesión
+      <button mat-icon-button (click)="sidenav.toggle()">
+        <mat-icon>menu</mat-icon>
       </button>
 
     </mat-toolbar>
 
-    <div class="container">
+    <mat-nav-list>
+      <mat-list-item *ngFor="let item of sidebarItems" [routerLink]="item.url" (click)="sidenav.toggle()">
+        <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
+        {{ item.label }}
+      </mat-list-item>
+    </mat-nav-list>
 
-      <router-outlet>ghhghg</router-outlet>
+  </mat-sidenav>
 
-    </div>
+  <mat-toolbar color="primary" style="background-color: #050531;">
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
 
-  </mat-sidenav-container>
+    <span class="spacer"></span>
 
- 
+    <button mat-button>
+      Iniciar Sesión
+    </button>
 
-  
+  </mat-toolbar>
+
+  <div class="container">
+
+    <router-outlet>ghhghg</router-outlet>
+
+  </div>
+
+</mat-sidenav-container>
