--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -19,7 +19,7 @@
 
         <p class="signup-link">
             ¿No tienes una cuenta?
-            <a href="">Registrate</a>
+            <a [routerLink]="['../register']">Registrate</a>
         </p>
     </form>
 </div>
