--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -19,7 +19,7 @@
 
         <p class="signup-link">
            ¿Ya tienes una cuenta?
-            <a href="">Iniciar Sesión</a>
+            <a [routerLink]="['../login']">Iniciar Sesión</a>
         </p>
     </form>
 </div>
