--- a/src/app/administration/layout/administration-layout/administration-layout.component.html
+++ b/src/app/administration/layout/administration-layout/administration-layout.component.html
@@ -19,22 +19,27 @@
 
   </mat-sidenav>
 
-  <mat-toolbar color="primary" style="background-color: #050531;">
+  <mat-toolbar color="primary" class="toolbar-content">
     <button mat-icon-button (click)="sidenav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
 
-    <span class="spacer"></span>
+    <div class="toolbar-icons">
+      <div class="user">
+        <mat-icon>account_circle</mat-icon> 
+        <span>{{ user()?.username }}</span>
+      </div>
 
-    <button mat-button>
-      Iniciar Sesión
-    </button>
+      <div class="close-sesion" matTooltip="Cerrar sesión">
+        <mat-icon>exit_to_app</mat-icon>
+      </div>
+    </div>
 
   </mat-toolbar>
 
   <div class="container">
 
-    <router-outlet>ghhghg</router-outlet>
+    <router-outlet/>
 
   </div>
 
