--- a/src/app/dashboard/layout/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/dashboard/layout/dashboard-layout/dashboard-layout.component.html
@@ -1,41 +1,46 @@
 <mat-sidenav-container fullscreen>
 
-    <mat-sidenav #sidenav mode="push" [ngStyle]="{ width: '250px'}">
-      <mat-toolbar color="primary" style="background-color: #050531;">
-        <span>Menú</span>
-        <span class="spacer"></span>
-        <button mat-icon-button (click)="sidenav.toggle()">
-          <mat-icon>menu</mat-icon>
-        </button>
-  
-      </mat-toolbar>
-  
-      <mat-nav-list>
-        <mat-list-item *ngFor="let item of sidebarItems" [routerLink]="item.url" (click)="sidenav.toggle()">
-          <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
-          {{ item.label }}
-        </mat-list-item>
-      </mat-nav-list>
-  
-    </mat-sidenav>
-  
+  <mat-sidenav #sidenav mode="push" [ngStyle]="{ width: '250px'}">
     <mat-toolbar color="primary" style="background-color: #050531;">
+      <span>Menú</span>
+      <span class="spacer"></span>
       <button mat-icon-button (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
-  
-      <span class="spacer"></span>
-  
-      <button mat-button>
-        Iniciar Sesión
-      </button>
-  
+
     </mat-toolbar>
-  
-    <div class="container">
-  
-      <router-outlet>{{ user() | json }}</router-outlet>
-  
+
+    <mat-nav-list>
+      <mat-list-item *ngFor="let item of sidebarItems" [routerLink]="item.url" (click)="sidenav.toggle()">
+        <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
+        {{ item.label }}
+      </mat-list-item>
+    </mat-nav-list>
+
+  </mat-sidenav>
+
+  <mat-toolbar color="primary" class="toolbar-content">
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+
+    <div class="toolbar-icons">
+      <div class="user">
+        <mat-icon>account_circle</mat-icon> 
+        <span>{{ user()?.username }}</span>
+      </div>
+
+      <div class="close-sesion" matTooltip="Cerrar sesión">
+        <mat-icon>exit_to_app</mat-icon>
+      </div>
     </div>
-  
-  </mat-sidenav-container>
+
+  </mat-toolbar>
+
+  <div class="container">
+
+    <router-outlet/>
+
+  </div>
+
+</mat-sidenav-container>
