--- a/src/app/administration/pages/criterio-page/criterio-dialog/dialog/criterio-dialog.component.html
+++ b/src/app/administration/pages/criterio-page/criterio-dialog/dialog/criterio-dialog.component.html
@@ -1,3 +1,4 @@
+
 <form [formGroup]="criterioDialogForm">
     <mat-dialog-content class="form-content">
 
@@ -11,9 +12,15 @@
             <mat-radio-button [value]="true">Activo</mat-radio-button>
             <mat-radio-button [value]="false">Inactivo</mat-radio-button>
         </mat-radio-group>
-      
+
       </mat-dialog-content>
 </form>
+
+<div style="padding: 20px 24px;">
+  <dialog-form style="margin: 0 auto;" (newCriterioItem)="addCriterioItem($event)"/>
+</div>
+
+<criterio-dialog-table [idCriterio]="idCriterio"/>
 
 <mat-dialog-actions class="form-actions">
   <button class="btn-principal" (click)="onClose()">Cancelar</button>
