--- a/src/app/administration/layout/administration-layout/administration-layout.component.html
+++ b/src/app/administration/layout/administration-layout/administration-layout.component.html
@@ -1,13 +1,9 @@
 <mat-sidenav-container fullscreen>
 
-  <mat-sidenav #sidenav mode="push" [ngStyle]="{ width: '250px'}">
+  <mat-sidenav #sidenav mode="side" [(opened)]="isSidenavOpen" [ngStyle]="{ width: '250px'}">
     <mat-toolbar color="primary" style="background-color: #050531;">
       <span>Menú</span>
       <span class="spacer"></span>
-      <button mat-icon-button (click)="sidenav.toggle()">
-        <mat-icon>menu</mat-icon>
-      </button>
-
     </mat-toolbar>
 
     <mat-nav-list>
