--- a/src/app/administration/layout/administration-layout/administration-layout.component.html
+++ b/src/app/administration/layout/administration-layout/administration-layout.component.html
@@ -8,7 +8,7 @@
 
     <mat-nav-list>
       @for (item of sidebarItems; track item) {
-        <mat-list-item [routerLink]="item.url" (click)="sidenav.toggle()">
+        <mat-list-item [routerLink]="item.url" >
           <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
           {{ item.label }}
         </mat-list-item>
