--- a/src/app/dashboard/layout/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/dashboard/layout/dashboard-layout/dashboard-layout.component.html
@@ -2,7 +2,7 @@
 
   <mat-sidenav #sidenav mode="side" [(opened)]="isSidenavOpen" [ngStyle]="{ width: '250px'}">
     <mat-toolbar color="primary" style="background-color: #050531;">
-      <span>Menú</span>
+      <span matTooltip="Proyecto gestión de auditoria">PGA</span>
       <span class="spacer"></span>
     </mat-toolbar>
 
