--- a/src/app/administration/pages/review-page/review-dialog/review-dialog.component.html
+++ b/src/app/administration/pages/review-page/review-dialog/review-dialog.component.html
@@ -51,7 +51,7 @@
                 <td data-label="Lineamiento">{{item.guideline}}</td>
                 <td data-label="Proceso">{{item.process}}</td>
                 <td data-label="Pregunta">{{item.question}}</td>
-                <td data-label="Observación">{{item.observation}}</td>
+                <td data-label="Observación">{{item.observation||'NA'}}</td>
                 <td data-label="Estado">{{item.status}}</td>
               </tr>
             }
